test/classes/generic/varOverBadGeneric.good
varOverBadGeneric.chpl:7: error: unresolved call 'C.init()'
varOverBadGeneric.chpl:1: note: this candidate did not match: C.init(type t, x: t)
varOverBadGeneric.chpl:7: note: because call does not supply enough arguments
varOverBadGeneric.chpl:2: note: it is missing a value for formal 't'
